# cicloV

analisis_numerico/brackets/: main.lfm  main.pas  methodsBracks.lpr  methodsBracks.lps  metodoscerrados.pas
analisis_numerico/calculadora_matrices/: algebramatrices.pas  calcMatrix.lpr  calcMatrix.lps  main.pas  operacionesBinarias.pas  operacionesUnarias.pas  parsemath.pas  variablesh.pas
analisis_numerico/graficadora/: grapher.lpr  grapher.lps  main.pas  parsemath.pas
analisis_numerico/interpolacion/: algoritmointerpolaciones.pas  interpolacionProject.lpr  interpolacionProject.lps  main.pas
analisis_numerico/metodosAbiertos/: main.lfm  main.pas  openMethods.lpi  openMethods.lpr  openMethods.lps  opmetodos.pas
analisis_numerico/solucion_ecuaciones/: bolzano.pas  bolzano.ppu  main.pas  sol_ecuaciones.lpr  sol_ecuaciones.lps
analisis_numerico/tareaTaylor/: class_taylor.pas  main.pas  project1.lpr  project1.lps
bdII/: CMakeLists.txt  Comando.cpp  Comando.h  Create.cpp  Create.h  Delete.cpp  Delete.h  Helpers.cpp  Helpers.h  Insert.cpp  Insert.h  Interface.cpp  Interface.h  Select.cpp  Select.h  Update.cpp  Update.h  main.cpp  metadata.txt  personas.txt
ingSoft/albumENV/: pip-selfcheck.json
libros bdII/: .fundamentos_de_bases_de_datos_henry_korth.pdf.icloud
newRaphGeneral/: algebramatrices.pas  main.pas  newtonRaphsonGeneral.lpr  newtonRaphsonGeneral.lps  newtongeneralizado.pas  parsemath.pas  variablesh.pas
newRaphGeneral/backup/: main.pas  (+4 more)
proyecto 1/: SLA piloto.pages  SLA-ING-SOFT.docx  introduction.pages  resumenes(1).pages  taxonimia.pages
(+137 files in other folders)
